Create Page 'Quem Somos'

--- a/config/locales/pt-BR/question.yml
+++ b/config/locales/pt-BR/question.yml
@@ -3,5 +3,7 @@ pt-BR:
     index:
       container_title: "Últimas perguntas"
       title: "Home"
+      
+    published_at: "Enviada em: %{time}"
 
 
