--- a/config/locales/pt-BR/flash.yml
+++ b/config/locales/pt-BR/flash.yml
@@ -2,3 +2,4 @@ pt-BR:
   flash:
     sendmail:
       notice: "Sua mensagem foi enviada com sucesso"
+      error: "Sua mensagem não pode ser entregue"
