--- a/config/locales/pt-BR/form.yml
+++ b/config/locales/pt-BR/form.yml
@@ -28,6 +28,6 @@ pt-BR:
       default_message: "Por favor verifique os campos no formulário"
     hints:
       defaults:
-        name: 'Campo Obrigatório'
-        email: 'Campo Obrigatório'
+      #  name: 'Campo Obrigatório'
+      #  email: 'Campo Obrigatório'
 
