--- a/config/locales/pt-BR/site.yml
+++ b/config/locales/pt-BR/site.yml
@@ -1,6 +1,6 @@
 pt-BR:
   site:
     about:
-      container_title: "Quem Somos"
+      container_title: "Nossa Missão"
       title: "Quem Somos"
 
