--- a/config/locales/pt-BR/flash.yml
+++ b/config/locales/pt-BR/flash.yml
@@ -1,5 +1,11 @@
 pt-BR:
   flash:
+    question:
+      create:
+        notice: "Sua pergunta foi cadastrada com sucesso."
+    answer:
+      create:
+        notice: "Sua resposta foi cadastrada com sucesso."
     sendmail:
       notice: "Sua mensagem foi enviada com sucesso"
       error: "Sua mensagem não pode ser entregue"
