--- a/config/locales/pt-BR/models.yml
+++ b/config/locales/pt-BR/models.yml
@@ -31,6 +31,7 @@ pt-BR:
         state_id: Estado
         city_id: Cidade
       user:
+        featured: Destaque
         username: Nome
         email: E-mail
         password: Senha
