--- a/config/locales/pt-BR/models.yml
+++ b/config/locales/pt-BR/models.yml
@@ -13,7 +13,7 @@ pt-BR:
         one: Pergunta
         other: Perguntas
       answer:
-        one: Respota
+        one: Resposta
         other: Respostas
         
     attributes:
