Migração para Linode

--- a/config/locales/pt-BR/question.yml
+++ b/config/locales/pt-BR/question.yml
@@ -16,7 +16,7 @@ pt-BR:
         other: advogados responderam
     question:
       answer:
-        one: resposta
-        other: respostas
+        one: Resposta
+        other: Respostas
 
 
