Adicionando Tradução do Titulo de comentario do artigo

--- a/config/locales/pt-BR/article.yml
+++ b/config/locales/pt-BR/article.yml
@@ -2,5 +2,6 @@ pt-BR:
   articles:
     article:
       comment:
+        any: "Nenhum Comentário"
         one: " %{count} Comentário"
         other: " %{count} Comentários"
